test/classes/jplevyak/record_type_hierarchy-3-error.chpl
record C {
  var x : integer;
}

record D {
  var x : integer;
  var y : integer;
}

function f(a : D) {
  return 1;
}

var b = C();

writeln(f(b));
